whitespace fix

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,7 +14,7 @@
     url(../img/nat-4.jpg);
   background-size: cover;
   transform: skewY(-7deg);
-  margin-top: -10rem;
+  margin-top: -12rem;
 
   & > * {
     transform: skewY(7deg);
